# django_cms_tutorial

./: .gitignore  README.md  pyproject.toml
src/: babayaga.py
src/myproject/: settings.py  urls.py
src/myproject/contrib/cms_polls/: apps.py  cms_plugins.py  models.py
src/myproject/contrib/cms_polls/migrations/: 0001_initial.py  0002_cmspollplugin_choice_1_cmspollplugin_choice_2_and_more.py
src/myproject/contrib/cms_polls/templates/cms_polls/: cms_polls.html  cms_polls_sep_choices.html  display_only.html
src/myproject/contrib/pages/: apps.py  urls.py  views.py
src/myproject/contrib/polls/: apps.py  urls.py
src/myproject/contrib/polls/templates/polls/: base.html
src/myproject/contrib/polls_cms_integration/: apps.py  cms_apps.py  cms_plugins.py  cms_toolbars.py  models.py
src/myproject/contrib/polls_cms_integration/migrations/: 0001_initial.py
src/myproject/contrib/simple_digital_wallet/: apps.py  cms_plugins.py  models.py
src/myproject/contrib/simple_digital_wallet/migrations/: 0001_initial.py
src/myproject/contrib/simple_digital_wallet/templates/simple_digital_wallet/: simple_digital_wallet.html
src/myproject/templates/: base.html  base_bootstrap5.html  bootstrap5_base.html  home.html  minimal.html
