[project]
name = "django_cms_tutorial"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.10,<6",
    "django-cms>=5.0.5,<6",
    "djangocms-versioning",
    "djangocms-alias",
    "djangocms-frontend",
    "django-filer",
    "djangocms-text",
    "django-fsm",
    "djangocms-simple-admin-style",
    "django-treebeard",
    # Miscellaneous recommended
    "djangocms-file",
    "djangocms-picture",
    "djangocms-video",
    "djangocms-googlemap",
    "djangocms-snippet",
    "djangocms-style",
]

[dependency-groups]
dev = [
    "psycopg[binary,pool]>=3.3.2",
    "commitizen>=4.13.10",
    "directory-tree>=1.0.0",
]